--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@ require:
   - rubocop-rspec
 
 AllCops:
-  TargetRubyVersion: 2.6
+  TargetRubyVersion: 3.2
   NewCops: enable
 
 Style/StringLiterals:
@@ -19,3 +19,6 @@ Layout/LineLength:
 
 RSpec/NestedGroups:
   Max: 5
+
+Gemspec/RequiredRubyVersion:
+  Enabled: false
