--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -2,9 +2,9 @@ name: Rspec test
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -14,9 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Ruby
-        uses: ruby/setup-ruby@477b21f02be01bcb8030d50f37cfec92bfa615b6
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 3.2.2
           bundler-cache: true
       - name: Run tests
-        run: bundle exec rake
+        run: bundle exec rspec
