fix github actions-2

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: bundle lock --add-platform x86_64-linux
       - uses: actions/checkout@v2
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
