--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -10,6 +10,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - uses: bundle lock --add-platform x86_64-linux
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
         with:
