--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
-    - uses: bundle lock --add-platform x86_64-linux
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
+      run: bundle lock --add-platform x86_64-linux
     - name: Run the default task
       run: bundle exec rake
