--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -15,9 +15,9 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
-      - uses: bundle lock --add-platform x86_64-linux
         with:
           ruby-version: 3.2.2
           bundler-cache: true
+        run: bundle lock --add-platform x86_64-linux
       - name: Run tests
         run: bundle exec rspec
