--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -12,9 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: ruby/setup-ruby@v1
-      - uses: bundle lock --add-platform x86_64-linux
         with:
           ruby-version: 3.2.2
           bundler-cache: true
+        run: bundle lock --add-platform x86_64-linux
       - name: Rubocop
         run: bundle exec rubocop
